--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/drawght/drawght.github.io/issues"
   },
-  "homepage": "https://github.com/drawght/drawght.github.io#readme"
+  "homepage": "https://github.com/drawght/drawght.github.io#readme",
+  "devDependencies": {
+    "@11ty/eleventy": "^0.12.1"
+  }
 }
