--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "markdown-it-deflist": "^2.1.0",
     "markdown-it-highlightjs": "^3.5.0"
   },
-  "styles": [
-    "/assets/styles/default.css",
-    "https://unpkg.com/@highlightjs/cdn-assets@11.1.0/styles/base16/solarized-dark.min.css"
-  ]
+  "links": {
+    "styles": [
+      "/assets/styles/default.css",
+      "https://unpkg.com/@highlightjs/cdn-assets@11.1.0/styles/base16/solarized-dark.min.css"
+    ],
+  }
 }
