--- a/package.json
+++ b/package.json
@@ -35,5 +35,17 @@
       "/assets/styles/default.css",
       "https://unpkg.com/@highlightjs/cdn-assets@11.1.0/styles/base16/solarized-dark.min.css"
     ],
+    "parsers": [
+      {
+        "language": "JavaScript/NodeJS",
+        "url": "https://github.com/drawght/drawght-parser-nodejs#readme"
+      }, {
+        "language": "Ruby",
+        "url": "https://github.com/drawght/drawght-parser-ruby#readme"
+      }, {
+        "language": "Go",
+        "url": "https://github.com/drawght/drawght-parser-go#readme"
+      }
+    ]
   }
 }
