Styles for manuals
- Styles were extracted from Ronn (https://github.com/rtomayko/ronn).

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "links": {
     "styles": [
       "/assets/styles/default.css",
+      "/assets/styles/manual.css",
       "https://unpkg.com/@highlightjs/cdn-assets@11.1.0/styles/base16/solarized-dark.min.css"
     ],
     "parsers": [
